--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "verse-hackathon",
-    "version": "0.0.0",
+    "name": "verse-scratcher",
+    "version": "0.2.0",
     "private": true,
     "scripts": {
         "dev": "vite --port 3000",
@@ -11,13 +11,13 @@
     "dependencies": {
         "@amplitude/analytics-browser": "^2.3.5",
         "@openzeppelin/merkle-tree": "^1.0.5",
-        "@wagmi/core": "^1.4.2",
-        "@web3modal/wagmi": "^3.0.0-beta.2",
+        "@wagmi/core": "^1.4.13",
+        "@web3modal/wagmi": "^3.5.6",    
         "axios": "^1.5.0",
         "ethers": "^6.7.1",
         "i": "^0.3.7",
         "npm": "^10.2.4",
-        "viem": "^1.10.14",
+        "viem": "1.21.4",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vue3-clipboard": "^1.0.0",
