add workflow dispatch to deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 name: Deploy master to CF (dev.scratcher.verse.bitcoin.com)
 on:
+  workflow_dispatch:
   repository_dispatch:
     types: [ manual-deployment ]
   push:
