--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,13 +11,14 @@
     "dependencies": {
         "@amplitude/analytics-browser": "^2.3.5",
         "@openzeppelin/merkle-tree": "^1.0.5",
-        "@wagmi/core": "^1.4.13",
-        "@web3modal/wagmi": "^3.5.6",    
+        "@wagmi/connectors": "^5.1.6",
+        "@wagmi/core": "^2.13.4",
+        "@web3modal/wagmi": "^5.1.0",
         "axios": "^1.5.0",
         "ethers": "^6.7.1",
         "i": "^0.3.7",
         "npm": "^10.2.4",
-        "viem": "1.21.4",
+        "viem": "^2.19.7",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vue3-clipboard": "^1.0.0",
@@ -27,7 +28,7 @@
         "@vitejs/plugin-vue": "^4.3.4",
         "eslint": "^8.46.0",
         "eslint-plugin-vue": "^9.16.1",
-        "sass": "^1.66.1",
+        "sass": "1.69.5",
         "vite": "^4.4.9"
     }
 }
