--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,8 +11,9 @@
     "dependencies": {
         "@amplitude/analytics-browser": "^2.3.5",
         "@openzeppelin/merkle-tree": "^1.0.5",
+        "@reown/appkit": "^1.6.4",
+        "@reown/appkit-adapter-wagmi": "^1.6.4",
         "@wagmi/core": "^2.6.5",
-        "@web3modal/wagmi": "^4.1.5",    
         "axios": "^1.5.0",
         "ethers": "^6.7.1",
         "i": "^0.3.7",
