--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,13 +11,14 @@
     "dependencies": {
         "@amplitude/analytics-browser": "^2.3.5",
         "@openzeppelin/merkle-tree": "^1.0.5",
-        "@wagmi/core": "^1.4.13",
-        "@web3modal/wagmi": "^3.5.6",    
+        "@reown/appkit": "1.6.4",
+        "@reown/appkit-adapter-wagmi": "1.6.4",
+        "@wagmi/core": "2.16.3",
         "axios": "^1.5.0",
         "ethers": "^6.7.1",
         "i": "^0.3.7",
         "npm": "^10.2.4",
-        "viem": "1.21.4",
+        "viem": "2.22.13",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vue3-clipboard": "^1.0.0",
