--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,10 +18,11 @@
         "ethers": "^6.7.1",
         "i": "^0.3.7",
         "npm": "^10.2.4",
-        "viem": "2.22.13",
+        "viem": "^2.23.5",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vue3-clipboard": "^1.0.0",
+        "wagmi": "^2.14.12",
         "web3": "^4.1.2"
     },
     "devDependencies": {
